Added some chnages to the settings page. Also can no retrieve assigned user information but may need to rething this as it will be a huge performnce issue on hundreds od records. may just nee to revert back to just inputing a name......

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
+  <meta name="keywords" content="<%= Setting::meta_tags %>" />
 
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', 'ddtabmenu', :cache => "base" %>
   <%= javascript_include_tag :all %>
