Updated a few things. however an error has occured when a new user try's to register to the site. Will need to check out previous changes to find the issue.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,7 +32,7 @@
             <%= f.buttons %>
 
             <% if current_user == nil %>
-                <%= hidden_field_tag "user[created_by]", @user.username %>
+                <%= hidden_field_tag "user[created_by]", "SELF" %>
             <% else %>
                 <%= hidden_field_tag "user[created_by]", current_user.username %>
             <% end %>
