--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,27 +1,28 @@
 <div id="top_float_right">
   <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), users_path) %><%= link_to [t "workorder.t_add_new"], users_path %>
 </div>
+<%= puts @work_orders.count() %>
 <div id="ddtabs1" class="basictab" >
 <ul>
-<li><a href="#new" rel="sc1"><%= t "workorder.tab_menu_new" %></a></li>
-<li><a href="#assigned" rel="sc2"><%= t "workorder.tab_menu_assigned" %></a></li>
-<li><a href="#on_hold" rel="sc3"><%= t "workorder.tab_menu_on_hold" %></a></li>
-<li><a href="#closed" rel="sc4"><%= t "workorder.tab_menu_closed" %></a></li>
+<li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %></a></li>
+<li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %></a></li>
+<li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %></a></li>
+<li><a href="#closed" rel="tab4"><%= t "workorder.tab_menu_closed" %></a></li>
 </ul>
 </div>
 <div id="index_table">
 <div class="tabcontainer">
 
-<div id="sc1" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<div id="tab1" class="tabcontent"  style="padding:10px 10px 10px 10px">
 <%= render(:partial => 'work_orders/new_wo_tab') %>
 </div>
-<div id="sc2" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<div id="tab2" class="tabcontent"  style="padding:10px 10px 10px 10px">
 <%= render(:partial => 'work_orders/assigned_wo_tab') %>
 </div>
-<div id="sc3" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<div id="tab3" class="tabcontent"  style="padding:10px 10px 10px 10px">
 <%= render(:partial => 'work_orders/on_hold_wo_tab') %>
 </div>
-<div id="sc4" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<div id="tab4" class="tabcontent"  style="padding:10px 10px 10px 10px">
 <%= render(:partial => 'work_orders/closed_wo_tab') %>
 </div>
 </div>
