--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
     <td>
       <% if permitted_to? :show, User.new  %>
           <%= link_to(image_tag('view.png', :title => [t "global.view"]), user )%> &nbsp;|&nbsp;
-          <%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), new_work_order_url(:clients_id => user.id, :clients_name => user.username) )%>
+          <%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), new_work_order_url(:client_id => user.id, :clients_name => user.username) )%>
       <% end %> &nbsp;|&nbsp;
       <% if current_user.roles_mask < user.roles_mask or current_user.id == @user.id %>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_user_path(user) ) %>&nbsp;|&nbsp;
