--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -53,7 +53,7 @@
     <td><%= @assigned.username %></td>
     <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
-        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+      <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
     </td>
   </tr>
 <% end %>
