--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -1,17 +1,17 @@
 <div id="top_float_right">
-   <%= link_to(image_tag('close.png', :title => [t "global.close"]), work_orders_path) %>&nbsp;<%= link_to([t "global.close"], work_orders_path) %><%= link_to(image_tag('close.png', :title => [t "global.close"]), close_workorder_path) %>&nbsp;<%= link_to([t "global.close"], close_workorder_path) %>
+   <%= link_to(image_tag('close.png', :title => [t "global.cancel"]), work_orders_path) %>&nbsp;&nbsp;<%= link_to([t "global.cancel"], work_orders_path) %>&nbsp;&nbsp;<%= link_to(image_tag('tick.png', :title => [t "global.close"]), close_workorder_path, :confirm => 'Are you sure?', :method => :put) %>&nbsp;<%= link_to([t "global.close"], close_workorder_path, :confirm => (t "workorder.message_close_confirmation"), :method => :put) %>
 </div>
 
 <div id="ddtabs1" class="basictab">
 <ul>
-<li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
-<li><a href="#<%= t "workorder.tab_menu_resolution"  %>" rel="sc2"><%= (t "workorder.tab_menu_resolution") %></a></li>
+<li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="tab1"><%= (t "workorder.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "workorder.tab_menu_resolution"  %>" rel="tab2"><%= (t "workorder.tab_menu_resolution") %></a></li>
 </ul>
 </div>
 
 <div class="tabcontainer">
 
-<div id="sc1" class="tabcontent">
+<div id="tab1" class="tabcontent">
 
 <% semantic_form_for(@work_order) do |f| %>
       <% f.inputs do %>
@@ -27,14 +27,11 @@
 
 <% end %>
 </div>
-<div id="sc2" class="tabcontent">
-
+<div id="tab2" class="tabcontent">
 <% semantic_form_for(@work_order) do |f| %>
       <% f.inputs do %>
-        <%= f.input :resolution, :label => (t "workorder.resolution")%>
-        <%= f.input :resolution, :label => (t "workorder.resolution") %>
-        <%= f.input :closed, :label => (t "workorder.details") %>
-        <%= f.input :priority_list, :label => (t "workorder.priority") %>
+        <%= f.input :resolution, :label => (t "workorder.resolution"), :input_html => { :rows => 20 }%>
+        <%= f.input :closed, :as => :select, :label => (t "workorder.closed"), :hint => (t "workorder.hint.re_open") %>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
       <% end %>
 <%= f.buttons %>
