--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -11,8 +11,9 @@
 
 
 <% semantic_form_for(@work_order) do |f| %>
+
       <% f.inputs do %>
-        <%= f.input :user_id, :as => :hidden ,:input_html => {:value => @user_id.id } %>
+        <%= f.input :user_id, :as=> :hidden, :value => params[:client_id] %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
         <%= f.input :description, :label => (t "workorder.details"), :input_html => {:width => "150"}%>
         <%= f.input :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
