Updated hepas of things. Still working hard on this....

--- a/app/views/work_orders/_closed_wo_tab.html.erb
+++ b/app/views/work_orders/_closed_wo_tab.html.erb
@@ -7,7 +7,7 @@
     <th><%= "Created at" %></th>
     <th><%= "Created by" %></th>
     <th><%= "Closed by" %></th>
-    <th><%= "Closed on" %></th>
+    <th><%= "Closed when?" %></th>
   </tr>
 
 
