--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,13 +1,12 @@
 <div id="top_float_right">
   <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), users_path) %><%= link_to [t "workorder.t_add_new"], users_path %>
 </div>
-<%= puts @work_orders.count() %>
 <div id="ddtabs1" class="basictab" >
 <ul>
-<li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %></a></li>
-<li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %></a></li>
-<li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %></a></li>
-<li><a href="#closed" rel="tab4"><%= t "workorder.tab_menu_closed" %></a></li>
+<li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><font color="red"><%= @new_work_orders.count%></font><% else %><%= @new_work_orders.count %><% end %>)</a></li>
+<li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<%= @assigned_work_orders.count %>)</a></li>
+<li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %>&nbsp;(<%= @on_hold_work_orders.count %>)</a></li>
+<li><a href="#closed" rel="tab4"><%= t "workorder.tab_menu_closed" %>&nbsp;(<%= @closed_work_orders.count %>)</a></li>
 </ul>
 </div>
 <div id="index_table">
