--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -4,27 +4,20 @@
 <li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
 </ul>
 </div>
-
 <div class="tabcontainer">
-
 <div id="sc1" class="tabcontent">
-
-
 <% semantic_form_for(@work_order) do |f| %>
-
       <% f.inputs do %>
         <%= f.input :user_id, :as=> :hidden, :value => params[:client_id] %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
         <%= f.input :description, :label => (t "workorder.details"), :input_html => {:width => "150"}%>
         <%= f.input :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
+        <%= f.input :assigned_to, :as => :select, :collection => User.find(:all, :conditions => "roles_mask < 5 " )  %>
         <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
       <% end %>
 <%= f.buttons %>
-
 <% end %>
 </div>
-
-
 </div>
