--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -48,12 +48,13 @@
     <td><%=h l assigned_wo.created_at, :format => :medium %></td>
     <td><%=h assigned_wo.created_by %></td>
     <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
-        <!--mytodo : possible database peformance issues as it hist the DB for every record. maybe just add username instead. or create a join model-->
+        <!--mytodo : possible database performance issues as it hist the DB for every record. maybe just add username instead. or create a join model-->
         <% @assigned = User.find(:first, :select => "username", :conditions => ["id = ?", assigned_wo.assigned_to]) %>
     <td><%= @assigned.username %></td>
-    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
+    <td ><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
+        <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(assigned_wo.id,:format => 'pdf'))%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
-      <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
     </td>
   </tr>
 <% end %>
