--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -379,47 +379,17 @@ fieldset#filters td.add-filter { text-align: right; vertical-align: top; }
 
 
 /*Used in Settings for label and text box layouts*/
-.box{
-padding:6px;
-margin-bottom: 10px;
-line-height:1.5em;
-
-}
+.box{padding:6px;margin-bottom: 10px;line-height:1.5em;}
 /***** Tabular forms ******/
-.tabular p{
-margin: 0;
-padding: 5px 0 8px 0;
-padding-left: 180px; /*width of left column containing the label elements*/
-height: 1%;
-clear:left;
-}
-
+.tabular p{margin: 0;padding: 5px 0 8px 0;padding-left: 180px; /*width of left column containing the label elements*/height: 1%;clear:left;}
 html>body .tabular p {overflow:hidden;}
-
-.tabular label{
-font-weight: bold;
-float: left;
-text-align: right;
-margin-left: -180px; /*width of left column*/
-width: 175px; /*width of labels. Should be smaller than left column to create some right
+.tabular label{ font-weight: bold;float: left;text-align: right;margin-left: -180px; /*width of left column*/width: 175px; /*width of labels. Should be smaller than left column to create some right
 margin*/
 }
 
-.tabular label.floating{
-font-weight: normal;
-margin-left: 0px;
-text-align: left;
-width: 270px;
-}
+.tabular label.floating{font-weight: normal;margin-left: 0px;text-align: left;width: 270px;}
 
-.tabular label.block{
-font-weight: normal;
-margin-left: 0px !important;
-text-align: left;
-float: none;
-display: block;
-width: auto;
-}
+.tabular label.block{font-weight: normal;margin-left: 0px !important;text-align: left;float: none;display: block;width: auto;}
 
 input#time_entry_comments { width: 90%;}
 
@@ -428,5 +398,9 @@ input#time_entry_comments { width: 90%;}
 .tabular.settings p{ padding-left: 300px; }
 .tabular.settings label{ margin-left: -300px; width: 295px; }
 .tabular.settings textarea { width: 99%; }
-
 fieldset.settings label { display: block; }
+
+/*Display Nice Table Labels and Fields and Fieldsets Headers*/
+.tbl_labels { width:25%; text-align:right; vertical-align:top;}
+.tbl_fields { text-align:left;vertical-align:top;}
+.tbl_fieldsets_headers { text-align:left;vertical-align:top;color:#af2a2a;}
