--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -17,13 +17,13 @@
       <% f.inputs do %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
         <%= f.input :status, :label => (t "workorder.status") %>
-        <%= f.input :assigned_to, :as => :select, :collection => User.find(:all, :conditions => "roles_mask < 5 " )  %>
-        <%= f.input :description, :label => (t "workorder.details")%>
         <%= f.input :priority_list, :label => (t "workorder.priority") %>
+        <%= f.input :assigned_to, :as => :select, :collection => User.find(:all, :conditions => "roles_mask < 5 " )  %>
+        <%= f.input :description, :label => (t "workorder.details"), :input_html => {:rows => 30, :style => "margin-left:26%" }%>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
       <% end %>
-<%= f.buttons %>
-
+    <%= f.buttons %>
+    <%= textiletoolbar_for('work_order_description') %>
 <% end %>
 </div>
 <div id="tab2" class="tabcontent">
