--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -5,7 +5,8 @@
 <% if permitted_to? :edit, WorkOrder.new %>
 <%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_work_order_path)%><%= link_to (t "global.edit"), edit_work_order_path %>&nbsp;&nbsp;
 <% end %>
-  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), work_orders_path)%><%= link_to (t "global.close"), work_orders_path %>
+  <%= link_to(image_tag('printer.png', :title => (t "global.print"),:align => "bottom", :hspace => "2"), work_order_path(@work_order.id,:format => 'pdf'))%><%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf') %>&nbsp;&nbsp;
+  <%= link_to(image_tag("close.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), work_orders_path)%><%= link_to (t "global.exit"), work_orders_path %>
 </div>
 <br>
 <br>
@@ -19,30 +20,6 @@
        <%= @work_order.subject %>
       </td>
   </tr>
-    <tr>
-          <td class="tbl_labels" >
-            <strong><%= t "workorder.priority" %>:</strong>
-          </td>
-          <td class="tbl_fields">
-           <%=h @work_order.priority_list.name %>
-          </td>
-      </tr>
-      <tr>
-          <td class="tbl_labels" >
-            <strong><%= t "workorder.status" %>:</strong>
-          </td>
-          <td class="tbl_fields">
-           <%=h @work_order.status.name %>
-          </td>
-      </tr>
-    <tr>
-      <td class="tbl_labels" align="right">
-        <strong><%= t "workorder.details" %>:</strong>
-      </td>
-      <td class="tbl_fields">
-        <%= RedCloth.new("test").to_html %>
-      </td>
-  </tr>
   <tr>
       <td class="tbl_labels" >
         <strong><%= t "workorder.assigned_to" %>:</strong>
@@ -54,6 +31,30 @@
             <% @assigned = User.find(:first, :select => "username", :conditions => ["id = ?", @work_order.assigned_to]) %>
             <%=h @assigned.username %>
         <% end %>
+      </td>
+  </tr>  
+    <tr>
+          <td class="tbl_labels" >
+            <strong><%= t "workorder.priority" %>:</strong>
+          </td>
+          <td class="tbl_fields priority_<%=@work_order.priority_list.id %>">
+           <%= @work_order.priority_list.name %>
+          </td>
+      </tr>
+      <tr>
+          <td class="tbl_labels" >
+            <strong><%= t "workorder.status" %>:</strong>
+          </td>
+          <td class="tbl_fields">
+           <%=h @work_order.status.name %>
+          </td>
+      </tr>
+    <tr>
+      <td align="right" valign="top">
+        <strong><%= t "workorder.details" %>:</strong>
+      </td>
+      <td class="tbl_textarea">
+        <%= simple_format(RedCloth3.new(@work_order.description).to_html) %>
       </td>
   </tr>
   </table>
