--- a/app/views/work_orders/_on_hold_wo_tab.html.erb
+++ b/app/views/work_orders/_on_hold_wo_tab.html.erb
@@ -1,5 +1,5 @@
 <table width="100%" >
-  <tr>
+  <tr><!--myTODO: Translation -->
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
@@ -14,32 +14,7 @@
 
 
 <% @on_hold_work_orders.each do |on_hold| %>
-      <!--mytodo - add row color shading by css and based on priority-->
-  <tr align="left"
-      <% if on_hold.priority_list_id == 1 %>
-          class="priority_low"
-        <% else %>
-    <% if on_hold.priority_list_id == 2 %>
-          class="priority_normal"
-       <% else %>
-      <% if on_hold.priority_list_id == 3 %>
-          class="priority_high"
-      <% else %>
-  <% if on_hold.priority_list_id == 4 %>
-          class="priority_urgent"
-      <% else %>
- <% if on_hold.priority_list_id == 5 %>
-          class="priority_critical"
-      <% else %>
-  <% if on_hold.priority_list_id > 5 %>
-      class=""
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-       >
+  <tr class="priority_main_<%= on_hold.priority_list.id %>">
     <td><%= link_to(on_hold.id, on_hold) %></td>
     <td><%= link_to(on_hold.user.username, user_path(on_hold.user_id)) %></td>
     <td><%=h on_hold.subject %></td>
