--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -1,5 +1,5 @@
 <table width="100%" >
-  <tr>
+  <tr> <!--mytodo: add translation-->
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
@@ -15,31 +15,7 @@
 
 <% @assigned_work_orders.each do |assigned_wo| %>
       <!--mytodo - add row color shading by css and based on priority-->
-  <tr align="left"
-      <% if assigned_wo.priority_list_id == 1 %>
-          class="priority_low"
-        <% else %>
-    <% if assigned_wo.priority_list_id == 2 %>
-          class="priority_normal"
-       <% else %>
-      <% if assigned_wo.priority_list_id == 3 %>
-          class="priority_high"
-      <% else %>
-  <% if assigned_wo.priority_list_id == 4 %>
-          class="priority_urgent"
-      <% else %>
- <% if assigned_wo.priority_list_id == 5 %>
-          class="priority_critical"
-      <% else %>
-  <% if assigned_wo.priority_list_id > 5 %>
-      class=""
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-      <% end %>
-       >
+  <tr align="left" class="priority_main_<%= assigned_wo.priority_list.id %>">
     <td><%= link_to(assigned_wo.id, assigned_wo) %></td>
     <td><%= link_to(assigned_wo.user.username, user_path(assigned_wo.user_id)) %></td>
     <td><%=h assigned_wo.subject %></td>
@@ -49,8 +25,12 @@
     <td><%=h assigned_wo.created_by %></td>
     <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
         <!--mytodo : possible database performance issues as it hist the DB for every record. maybe just add username instead. or create a join model-->
-        <% @assigned = User.find(:first, :select => "username", :conditions => ["id = ?", assigned_wo.assigned_to]) %>
-    <td><%= @assigned.username %></td>
+        <% if assigned_wo.assigned_to ||= nil %>
+            <% @assigned = User.find(:first, :select => "username", :conditions => ["id = ?", assigned_wo.assigned_to]) %>
+            <td><%= @assigned.username %></td>
+        <% else %>
+    <td></td>
+        <% end %>
     <td ><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
         <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(assigned_wo.id,:format => 'pdf'))%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
